--- a/借過此資料夾/切版範例/www/index.html
+++ b/借過此資料夾/切版範例/www/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="header-box1">
+    <header class="header-box1">
       <div class="fix-width">
         <a href="javascript:;">首頁</a>
         <a href="javascript:;">購物中心</a>
@@ -17,9 +17,10 @@
         <a href="javascript:;">信箱</a>
         <a href="javascript:;">App下載</a>
       </div>
-    </div>
+    </header>
     <div class="header-box2">
       <div class="fix-width">
+        <!-- 注意這h1在SEO很重要 -->
         <h1>雅虎奇摩超級商城</h1>
         <div class="search-box">
           <input type="text" placeholder="請輸入">
@@ -67,7 +68,104 @@
           </div>
         </div>
         <div class="right-box">
-          right
+          <!-- 大廣告區塊 -->
+          <div class="block-box" id="blockA"><h4>大廣告區塊</h4> 不細切了</div>
+          <!-- 三個廣告區塊 -->
+          <ul class="block-box space" id="blockB">
+            <li>
+              <h4>今日爆殺.一日限定</h4>
+              <a href="javascript:;">圖片連結</a>
+            </li>
+            <li>
+              <h4>均價99.免運費</h4>
+              <a href="javascript:;">圖片連結</a>
+            </li>
+            <li>
+              <h4>加碼送旅遊折扣碼</h4>
+              <a href="javascript:;">圖片連結</a>
+            </li>
+          </ul>
+          <!-- 你可能會喜歡區塊 -->
+          <div class="block-box space" id="blockC"><h4>你可能會喜歡</h4> 不細切了</div>
+          <!-- 時尚流行 -->
+          <div class="block-box space" id="blockD">
+            <div class="block-title-box">
+              <h4>時尚流行</h4>
+              <a href="javascript:;">我要曝光</a><span>第1頁</span>
+            </div>
+            <div class="block-content-box">
+              <!-- 左右 change btn -->
+              <button class="change-btn left-btn"> < </button>
+              <button class="change-btn right-btn"> > </button>
+              <div class="one-gallery-box">
+                <div class="one-gallery-left-box">
+                  <a href="javsascript:;">圖片連結</a>
+                </div>
+                <div class="one-gallery-center-box">
+                  <div class="box1">
+                    <div class="one-product">
+                      <a href="javascript:;">圖片連結</a>
+                      <div class="prod-name">
+                        <a href="javascript:;">
+                          <p>主標題</p>
+                          <p>副標題</p>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <ul class="box2">
+                    <li class="one-product">
+                      <a href="javascript:;">產品圖連結</a>
+                      <div class="prod-name">
+                        <a href="javascript:;">
+                          <p>主標題</p>
+                          <p>副標題</p>
+                        </a>
+                      </div>
+                    </li>
+                    <li class="one-product">
+                      <a href="javascript:;">產品圖連結</a>
+                      <div class="prod-name">
+                        <a href="javascript:;">
+                          <p>主標題</p>
+                          <p>副標題</p>
+                        </a>
+                      </div>
+                    </li>
+                    <li class="one-product">
+                      <a href="javascript:;">產品圖連結</a>
+                      <div class="prod-name">
+                        <a href="javascript:;">
+                          <p>主標題</p>
+                          <p>副標題</p>
+                        </a>
+                      </div>
+                    </li>
+                    <li class="one-product">
+                      <a href="javascript:;">產品圖連結</a>
+                      <div class="prod-name">
+                        <a href="javascript:;">
+                          <p>主標題</p>
+                          <p>副標題</p>
+                        </a>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="one-gallery-right-box">
+                  右邊這小區塊就不細切了
+                </div>
+              </div>
+            </div>
+            <div class="block-bottom-box">
+              <h4>品牌名店館 >> </h4>
+              <a href="javascript:;">廣告圖1連結</a>
+              <a href="javascript:;">廣告圖2連結</a>
+              <a href="javascript:;">廣告圖3連結</a>
+              <a href="javascript:;">廣告圖4連結</a>
+              <a href="javascript:;">廣告圖5連結</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
